force-app/main/default/objects/Contract/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>net total price</description>
    <label>Total Price</label>
    <summarizedField>Contract_Product__c.Subtotal_Price__c</summarizedField>
    <summaryForeignKey>Contract_Product__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>