force-app/main/default/objects/Contract/fields/Total_Price_with_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_with_VAT__c</fullName>
    <formula>Total_Price__c * 1.27</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price with VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>